# kanban

./: .gitignore  readme.md
benchmarks/: all.sh  justfile  mixed.txt  monitor_process.py  patch-card.json  post-board.json  post-card.json  readme.md  reads.txt  run_bench.sh  writes.txt
benchmarks/best/: diesel-rocket-60s-40w-mixed.csv  diesel-rocket-60s-40w-mixed.report  diesel-rocket-60s-40w-reads.csv  diesel-rocket-60s-40w-reads.report  pg-mixed.report  pg-reads.reprt  pgbench-mixed.report  pgbench-reads.report  pgp-express-60s-40w-mixed.csv  pgp-express-60s-40w-mixed.report  pgp-express-60s-40w-reads.csv  pgp-express-60s-40w-reads.report  pgp-express-multi-60s-40w-mixed.csv  pgp-express-multi-60s-40w-mixed.report  pgp-express-multi-60s-40w-reads.csv  pgp-express-multi-60s-40w-reads.report  (+4 more)
diesel-rocket/: .env  Cargo.toml  Rocket.toml  diesel.toml  justfile  readme.md
diesel-rocket/migrations/2021-04-22-225954_create_boards/: down.sql  up.sql
diesel-rocket/migrations/2021-04-22-230321_create_cards/: down.sql  up.sql
diesel-rocket/migrations/2021-04-24-204401_create_tokens/: down.sql  up.sql
diesel-rocket/src/: db.rs  logger.rs  main.rs  models.rs  routes.rs  schema.rs
pgp-express/: .env  package.json  readme.md
pgp-express-multi/: migrations.js  package-lock.json  package.json  readme.md
sqlx-actix-web/: .env  Cargo.toml  justfile  readme.md
sqlx-actix-web/migrations/: 20210425110123_create_boards.sql  20210425110128_create_cards.sql  20210426161552_create_tokens.sql
sqlx-actix-web/src/: db.rs  logger.rs  main.rs  models.rs  routes.rs
(+22 files in other folders)
