# Cargo.toml

[package]
name = "kanban"
version = "0.1.0"
authors = ["pretzelhammer <7769424+pretzelhammer@users.noreply.github.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
fern = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
rocket = "0.4"
rocket_contrib = "0.4"

[profile.dev]
debug = 0

[profile.release]
debug = 0
lto = true
codegen-units = 1
panic = "abort"
